2007-09-07  Tobias Koenig  <tokoe@kde.org>

  - Put tile creation into a worker thread and
	  adopted the TileCreationDialog

  - Improved HttpFetchFile by encoding the path
	  url correctly, adding User-Agent and support
		for HTTP redirect, now all city names are loaded
		correctly from WikiPedia

  - Read the HTML pages as UTF-8, now the webpages
	  look a lot better

2007-09-07  Torsten Rahn  <rahn@kde.org>

	* src/lib/DiscCache.{h,cpp}:
	- Coding-Style & compile with Qt 4.2, too. 

2007-09-06  Tobias Koenig  <tokoe@kde.org>

  Refactored HttpDownloadManager and HttpFetchFile by introducing
	StoragePolicy.

	Fixed the TinyHttpBrowser to show images and load style sheets.

2007-09-05  Tobias Koenig  <tokoe@kde.org>

  Add DiscCache class

2007-09-05  Tobias Koenig  <tokoe@kde.org>

	KPartified Marble.

2007-09-05  Inge Wallin  <inge@lysator.liu.se>

	Simplify code.
	* src/lib/PlaceMarkPainter.cpp (*PaintPlaceFolder): Simplify code
	structure.

2007-09-03  Torsten Rahn  <rahn@kde.org>

	- "Fixed" last "jump" issue in the flat projection. 
	- Tidied up the naming of the euler angles a but
	- "Fixed" issue in the plain map which made the 
	  ocean water not being in sync with the rest.
	Well, all this needs to be tidied up, still.

	* src/lib/MeasureTool.cpp
	* src/lib/MarbleWidget.cpp
	* src/lib/Quaternion.cpp
	* src/lib/PlaceMarkPainter.cpp
	* src/lib/VectorMap.cpp
	* src/lib/TextureColorizer.cpp
	* src/lib/VectorMap.h
	* src/lib/VectorComposer.cpp
	* src/lib/GridMap.cpp
	* src/lib/MarbleWidgetInputHandler.cpp
	* src/lib/FlatScanlineTextureMapper.cpp

2007-09-02  Torsten Rahn  <rahn@kde.org>

	- Fixed "jumpy" flat projection. Still needs work to 
	  fix the "jump" for the case where the centerLat
	  exceeds +/- M_PI which has other causes:

	* MeasureTool.cpp
	* MarbleWidget.cpp
	* Quaternion.cpp
	* PlaceMarkPainter.cpp
	* VectorMap.cpp
	* TextureColorizer.cpp
	* GridMap.cpp
	* MarbleWidgetInputHandler.cpp
	* FlatScanlineTextureMapper.cpp

	* TileCreator.cpp: